# FlowState

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_alignment.py  bench_asof_join.py  bench_full_suite.py  bench_quick_compare.py  bench_vs_industry.py
flowstate-core/: Cargo.toml  pyproject.toml
flowstate-core/benches/: asof_bench.rs  spsc_bench.rs
flowstate-core/src/: bloom.rs  coalesce.rs  hdr.rs  ipc.rs  lib.rs  pinned.rs  pipeline.rs  pool.rs  spsc.rs
flowstate-core/src/asof/: config.rs  gather.rs  join.rs  mod.rs  multi.rs  parallel_scan.rs  scan.rs  streaming.rs
flowstate-core/tests/: correctness.rs
orderbook/: CMakeLists.txt
orderbook/bench/: bench_order_book.cpp
orderbook/include/orderbook/: order_book.h  price_level.h  types.h
orderbook/tests/: test_order_book.cpp
src/flowstate/: __init__.py  pipeline.py
src/flowstate/features/: __init__.py  microstructure.py
src/flowstate/firehose/: __init__.py  alpaca.py  client.py  pipeline.py  polygon.py  ring_buffer.py
src/flowstate/ops/: __init__.py  alignment.py  health.py  metrics.py
src/flowstate/prism/: __init__.py  alignment.py  dataloader.py  distributed.py  gpu_direct.py  gpu_pipeline.py  nccl.py  pinned_buffer.py  prefetcher.py  replay.py  shard.py  streaming.py
src/flowstate/schema/: __init__.py  normalization.py  registry.py  types.py  validation.py
src/flowstate/storage/: __init__.py  cache.py  object_store.py  partitioning.py  writer.py
src/flowstate/store/: __init__.py  catalog.py  materializer.py  server.py
tests/: conftest.py  test_alignment.py  test_alpaca.py  test_api_surface.py  test_cache.py  test_cache_extended.py  test_catalog.py  test_dataloader.py  test_dataloader_extended.py  test_distributed_replay.py  test_firehose_client.py  test_gpu_direct.py  test_gpu_direct_extended.py  test_gpu_pipeline.py  test_health.py  test_integration.py  test_materializer.py  test_metrics.py  test_microstructure.py  test_nccl.py  test_normalization.py  test_object_store.py  test_object_store_extended.py  test_partitioning.py  test_partitioning_extended.py  test_pinned_buffer.py  test_pipeline.py  test_pipeline_e2e.py  test_polygon.py  test_prefetcher.py  test_replay.py  test_ring_buffer.py  test_rust_roundtrip.py  test_schema_registry.py  test_schema_types.py  test_server.py  test_shard.py  test_streaming.py  test_temporal_alignment.py  test_validation.py  (+1 more)
