[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowstate"
dynamic = ["version"]
description = "Production-grade market data ingestion, normalization, and storage for GPU-accelerated ML training"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "FlowState Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyarrow>=14.0",
    "websockets>=12.0",
    "orjson>=3.9",
    "xxhash>=3.4",
    "fsspec>=2024.2",
]

[project.optional-dependencies]
gpu = [
    "kvikio>=24.04",
    "cupy>=13.0",
]
ray = [
    "ray>=2.9",
]
aws = [
    "s3fs>=2024.2",
]
gcs = [
    "gcsfs>=2024.2",
]
azure = [
    "adlfs>=2024.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/flowstate-io/flowstate"
Repository = "https://github.com/flowstate-io/flowstate"
Issues = "https://github.com/flowstate-io/flowstate/issues"

[tool.hatch.version]
path = "src/flowstate/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/flowstate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
